--- a/together_and_stronger_website/styles/style.css
+++ b/together_and_stronger_website/styles/style.css
@@ -43,6 +43,12 @@ header {
     font-family: "omnes-pro", sans-serif;
     font-weight: 800;
     font-style: normal;
+    text-decoration: none;
+}
+
+.logo-link{
+    text-decoration: none;
+    color: #000000;
 }
 
 .auth-buttons {
@@ -56,6 +62,9 @@ header {
     cursor: pointer;
     font-size: 1rem;
     padding: 10px 20px;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 .signup-button {
@@ -117,6 +126,7 @@ h2 span{
     display: block;
     margin: 0 auto;
     width: 200px;
+    text-decoration: none;
     background-color: var(--primary-color);
     color: #fff;
     border: none;
@@ -124,6 +134,9 @@ h2 span{
     border-radius: 100px;
     cursor: pointer;
     text-align: center;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .cta-button:hover {
@@ -184,12 +197,15 @@ footer {
     font-weight: bold;
     margin: 0;
     text-align: left;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 800;
+    font-style: normal;
 }
 
 .footer-nav {
     flex-basis: 30%;
     text-align: center;
-    padding-right: 110px;
+    padding-right: 140px;
 }
 
 .footer-nav ul {
@@ -203,6 +219,9 @@ footer {
 .footer-nav a {
     color: #000000;
     text-decoration: none;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 .footer-nav a:hover {
@@ -231,6 +250,9 @@ footer {
 .footer-lang a {
     color: black;
     text-decoration: none;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 .footer-lang a:hover {
@@ -242,6 +264,9 @@ footer {
     margin-top: 20px;
     font-size: 14px;
     color: #000000;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
 }
 
 /* PAGE INSCRIPTION */
@@ -369,4 +394,80 @@ button[type="submit"]:hover {
     .form-container h2 {
         font-size: 24px;
     }
+}
+
+/* PAGE CATALOGUE */
+
+.main-activities {
+    background-color: #fff;
+    padding: 0px 0;
+    margin-bottom: 100px;
+}
+
+.act-container {
+   text-align: center;
+}
+
+.catalogue-title{
+    font-size: 2.5rem;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 700;
+    font-style: normal;
+}
+
+.catalogue-phrase{
+    font-size: 1.5rem;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.catalogue-line {
+    border-top: 3px solid #bbb;
+    margin: 25px;
+}
+
+.activities-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    justify-items: center;
+}
+
+.activity-item {
+    background-color: var(--primary-color);
+    padding: 1rem;
+    border-radius: 20px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 280px;
+    height: 420px;
+}
+
+.activity-item img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 20px;
+}
+
+.activity-name {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    font-size: 1.25rem;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.discover-btn {
+    background-color: #000000;
+    color: #fff;
+    border: none;
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: 20px;
+    font-family: omnes-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
